<resources>
    <string name="app_name">chapter02</string>
    <string name="app_title1">직접 풀어보기 1</string>
    <string name="app_title2">직접 풀어보기 2</string>
    <string name="app_title3">직접 풀어보기 3</string>
    <string name="app_title4">직접 풀어보기 4</string>
    <string name="app_title5">직접 풀어보기 5</string>
    <string name="exercise_title4">연습문제 4</string>
    <string name="exercise_title5">연습문제 5</string>
    <string name="exercise_title6">연습문제 6</string>
    <string name="exercise_title7">연습문제 7</string>
    <string name="exercise_title8">연습문제 8</string>
    <string name="exercise_title9">연습문제 9</string>
    <string name="exer_naver">네이버 홈 열기</string>
    <string name="checkbox">CheckBox</string>
    <string name="switch_name">Switch</string>
    <string name="button">Button</string>
    <string name="hello_world">Hello World</string>
    <string name="Default_Addr">https://m.daum.net</string>
    <string name="Nav_Addr">https://m.naver.com</string>
    <string name="StrBtn1">글자 나타내기</string>
    <string name="StrBtn2">홈페이지 열기</string>
    <string name="RdBtn1">Q(10)</string>
    <string name="RdBtn2">R(11)</string>
</resources>